# kraken-btc

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs  private.rs  public.rs
src/networking/: error.rs  http.rs  mod.rs  request.rs  response.rs
