[package]
name = "kraken-btc"
version = "0.1.0"
authors = ["Daniel <https://twitter.com/dnlggr>"]
edition = "2018"
license = "MIT"
publish = false

[dependencies]
ureq = { version = "1.5.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16.17"
base64 = "0.13.0"
structopt = "0.3.20"
thiserror = "1.0.22"
anyhow = "1.0.35"
console = "0.13.0"