[package]
name = "kraken-btc"
version = "0.1.0"
authors = ["Daniel <hi@dnlggr.xyz>"]
description = "An opinionated command line interface for buying Bitcoin on Kraken.com."
homepage = "https://github.com/dnlggr/kraken-btc"
documentation = "https://github.com/dnlggr/kraken-btc"
repository = "https://github.com/dnlggr/kraken-btc"
edition = "2018"
license = "MIT"
keywords = ["bitcoin"]
categories = ["command-line-utilities"]

[dependencies]
ureq = { version = "1.5.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16.17"
base64 = "0.13.0"
structopt = "0.3.20"
thiserror = "1.0.22"
anyhow = "1.0.35"
console = "0.13.0"
